--- a/ishop/lenovo/index.html
+++ b/ishop/lenovo/index.html
@@ -26,43 +26,43 @@
     var listArr = [
         {
             name: 'Yoga 920 (14") Vibes',
-            code: '920',
-            count: '670$',
+            code: 920,
+            count: 670,
             description: 'Изящные и тонкие, но при этом невероятно производительные ноутбуки «2 в 1» с уникальным шарнирным механизмом по типу часового браслета и четырьмя режимами работы.',
             img: 'images/lenovo-laptop-yoga-900-13-400x300-win10.png',
-            remainder: 'Remainder: 2'
+            remainder: 2
         },
         {
             name: 'Yoga 700 (14")',
-            code: '700',
-            count: '850$',
+            code: 700,
+            count: 850,
             description: 'Ультрасовременные ноутбуки-трансформеры с поддержкой четырех режимов использования отличаются непревзойденной производительностью и мобильностью в сочетании с другими передовыми возможностями.',
             img: 'images/lenovo-laptop-yoga-700-11-400x300-win10.png',
-            remainder: 'Remainder: 4' 
+            remainder: 4
         },
         {
             name: 'Yoga 720 (15")',
-            code: '720',
-            count: '900$',
+            code: 720,
+            count: 900,
             description: 'Ультрасовременные ноутбуки-трансформеры с поддержкой четырех режимов использования отличаются непревзойденной производительностью и мобильностью в сочетании с другими передовыми возможностями.',
             img: 'images/lenovo-laptop-yoga-700-11-400x300-win10.png',
-            remainder: 'Remainder: 1'
+            remainder: 1
         },
         {
             name: 'Yoga 510 (14", AMD)',
-            code: '510',
-            count: '690$',
+            code: 510,
+            count: 690,
             description: 'Универсальный ПК высокой производительности с поддержкой четырех основных режимов.',
             img: 'images/lenovo-laptop-yoga-500-white-400x300-win10.png',
-            remainder: 'Remainder: 6'
+            remainder: 6
         },
         {
             name: 'Yoga 310 (11")',
-            code: '310',
-            count: '620$',
+            code: 310,
+            count: 620,
             description: 'Доступные устройства с поддержкой четырех различных режимов для решения практически любых задач: ноутбук, консоль, презентация и планшет.',
             img: 'images/lenovo-laptop-yoga-300-11-400x300-win10.png',
-            remainder: 'Remainder: 1'
+            remainder: 1
         }
     ];
 
