--- a/filter/index.html
+++ b/filter/index.html
@@ -27,87 +27,87 @@
     var countries = [
         {
             name: 'Бельгия',
-            key: 1
+            code: 1
         },
         {
             name: 'Великобритания',
-            key: 2
+            code: 2
         },
         {
             name: 'Австрия',
-            key: 3
+            code: 3
         },
         {
             name: 'Германия',
-            key: 4
+            code: 4
         },
         {
             name: 'Лихтенштейн',
-            key: 5
+            code: 5
         },
         {
             name: 'Ирландия',
-            key: 6
+            code: 6
         },
         {
             name: 'Люксембург',
-            key: 7
+            code: 7
         },
         {
             name: 'Монако',
-            key: 8
+            code: 8
         },
         {
             name: 'Швейцария',
-            key: 9
+            code: 9
         },
         {
             name: 'Франция',
-            key: 10
+            code: 10
         },
         {
             name: 'Нидерланды',
-            key: 11
+            code: 11
         },
         {
             name: 'Белоруссия',
-            key: 12
+            code: 12
         },
         {
             name: 'Чехия',
-            key: 13
+            code: 13
         },
         {
             name: 'Болгария',
-            key: 14
+            code: 14
         },
         {
             name: 'Украина',
-            key: 15
+            code: 15
         },
         {
             name: 'Венгрия',
-            key: 16
+            code: 16
         },
         {
             name: 'Словакия',
-            key: 17
+            code: 17
         },
         {
             name: 'Молдавия',
-            key: 18
+            code: 18
         },
         {
             name: 'Румыния',
-            key: 19
+            code: 19
         },
         {
             name: 'Россия',
-            key: 20
+            code: 20
         },
         {
             name: 'Польша',
-            key: 21
+            code: 21
         }
     ];  
 
