--- a/filter/index.html
+++ b/filter/index.html
@@ -16,7 +16,7 @@
   <script src="https://unpkg.com/react@15/dist/react.js"></script> 
   <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script> 
       
-  <script src="components/filter.js"></script>
+  <script src="components/countries.js"></script>
   <script src="components/country.js"></script>
 
   
