--- a/mobile/index.html
+++ b/mobile/index.html
@@ -2,7 +2,7 @@
 <html> 
 <head> 
   <meta charset="utf-8" />
-  <title>Mobile</title>
+  <title>Mobile company</title>
   <link rel="stylesheet" type="text/css" href="bundle.css">
 </head> 
 <body> 
